# atcoder-shell

./: .gitignore  LICENSE  requirements.txt  setup.cfg  setup.py  setup.sh
docs/: DEVELOP.md  README.md  RELEASE.md
src/acshell/: acshell.py  cheetsheet.py  const.py  consts.py  exceptions.py  help.py  login.py  main.py  result.py  task_run.py  texts.py  utils.py
src/acshell/contest/: contest.py  task.py
