[metadata]
name = acshell
version = file: VERSION
description = the commandline shell for python and pypy AtCoder user
long_description = file: docs.README.md
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
install_requires =
    BeautifulSoup4
    requests
    tabulate
    lxml
    appdirs
    # for atcoder
    numpy
    numba
    # scipy
    # scikit-learn
    # networkx
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    acsh = acshell.main:main

[flake8]
exclude = .git,.venv,docs,dust,__init__.py
ignore = W504,E501
max_length = 100
