[metadata]
name = acshell
version = file: VERSION
description = the commandline shell for python and pypy AtCoder user
author = tani-cat
url = https://www.github.com/tani-cat/atcoder-shell
license = MIT
long_description = file: docs/README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
install_requires =
    appdirs~=1.4.4
    beautifulsoup4~=4.11
    lxml>=4.9
    requests>=2.28
    tabulate>=0.8.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    acsh = acshell.main:main

[flake8]
exclude = .git,.venv,docs,dust,__init__.py
ignore = W504,E501
max_length = 100
